tests/ui/unsafe/issue-45087-unreachable-unsafe.stderr
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/issue-45087-unreachable-unsafe.rs:5:5
   |
LL |     *(1 as *mut u32) = 42;
   |     ^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/issue-45087-unreachable-unsafe.rs:15:5
   |
LL |     *a = 1;
   |     ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/issue-45087-unreachable-unsafe.rs:27:5
   |
LL |     *b = 1;
   |     ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0133`.
